[package]
authors = [
  "Anthony MOI <m.anthony.moi@gmail.com>",
  "Nicolas Patry <patry.nicolas@protonmail.com>",
]
edition = "2018"
name = "tokenizers"
version = "0.22.3-dev.0"
homepage = "https://github.com/huggingface/tokenizers"
repository = "https://github.com/huggingface/tokenizers"
documentation = "https://docs.rs/tokenizers/"
license = "Apache-2.0"
keywords = ["tokenizer", "NLP", "huggingface", "BPE", "WordPiece"]
readme = "./README.md"
description = """
Provides an implementation of today's most used tokenizers,
with a focus on performances and versatility.
"""
exclude = [
  "rust-toolchain",
  "target/*",
  "Cargo.lock",
  "benches/*.txt",
  "benches/*.json",
  "data/*",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "tokenizers"
path = "src/lib.rs"
bench = false

[[bench]]
name = "bpe_benchmark"
harness = false

[[bench]]
name = "bert_benchmark"
harness = false

[[bench]]
name = "layout_benchmark"
harness = false

[[bench]]
name = "unigram_benchmark"
harness = false

[[bench]]
name = "llama3_benchmark"
harness = false

[[bench]]
name = "added_vocab_deserialize"
required-features = ["http"]
harness = false

[[bench]]
name = "truncation_benchmark"
harness = false

[[bench]]
name = "ci_benchmark"
harness = false

[dependencies]
rand = { version = "0.9", optional = true }
onig = { version = "6.5.1", default-features = false, optional = true }
regex = { version = "1.10", default-features = false, features = ["std", "perf", "unicode-perl"] }
regex-syntax = { version = "0.8", default-features = false, features = ["std", "unicode-perl"] }
rayon = { version = "1.10", optional = true }
rayon-cond = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization-alignments = { version = "0.1", optional = true }
unicode_categories = "0.1"
unicode-segmentation = { version = "1.11", optional = true }
indicatif = { version = "0.18", optional = true }
log = "0.4"
spm_precompiled = { version = "0.1.3", optional = true }
hf-hub = { version = "0.4.1", features = ["ureq"], default-features = false, optional = true }
daachorse = "1.0.1"
paste = "1.0.14"
macro_rules_attribute = "0.2.0"
thiserror = "2"
fancy-regex = { version = "0.17", optional = true }
getrandom = { version = "0.3" }
esaxx-rs = { version = "0.1.10", default-features = false, features = [], optional = true }
foldhash = "0.2"
dary_heap = { version = "0.3.6", features = ["serde"] }
compact_str = { version = "0.9", features = ["serde"], optional = true }

[features]
default = ["progressbar", "onig", "esaxx_fast", "spm", "training", "parallel", "unicode-normalization"]
unicode-normalization = ["dep:unicode-normalization-alignments"]
parallel = ["dep:rayon", "dep:rayon-cond"]
training = ["dep:rand", "dep:esaxx-rs", "dep:compact_str"]
spm = ["dep:spm_precompiled", "dep:unicode-segmentation"]
esaxx_fast = ["dep:esaxx-rs", "esaxx-rs/cpp"]
progressbar = ["indicatif"]
http = ["hf-hub"]
unstable_wasm = ["fancy-regex", "getrandom/wasm_js"]
rustls-tls = ["hf-hub?/rustls-tls"]

[dev-dependencies]
criterion = "0.6"
tempfile = "3.10"
assert_approx_eq = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3.18"

[profile.release]
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true

[[example]]
name = "encode_batch"
required-features = ["http"]


