[workspace]
members = ["tk-encode", "tk-train"]

[package]
authors = [
  "Anthony MOI <m.anthony.moi@gmail.com>",
  "Nicolas Patry <patry.nicolas@protonmail.com>",
  "Arthur Zucker <arthur@huggingface.co",
  "Luc Georges <luc@huggingface.co",
]
edition = "2018"
name = "tokenizers"
version = "0.23.2-dev.0"
homepage = "https://github.com/huggingface/tokenizers"
repository = "https://github.com/huggingface/tokenizers"
documentation = "https://docs.rs/tokenizers/"
license = "Apache-2.0"
keywords = ["tokenizer", "NLP", "huggingface", "BPE", "WordPiece"]
readme = "./README.md"
description = """
Provides an implementation of today's most used tokenizers,
with a focus on performances and versatility. Umbrella crate re-exporting
`tk-encode` (inference) and `tk-train` (training).
"""
exclude = [
  "rust-toolchain",
  "target/*",
  "Cargo.lock",
  "benches/*.txt",
  "benches/*.json",
  "data/*",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "tokenizers"
path = "src/lib.rs"
bench = false

[[bench]]
name = "bpe_benchmark"
harness = false

[[bench]]
name = "bert_benchmark"
harness = false

[[bench]]
name = "layout_benchmark"
harness = false

[[bench]]
name = "unigram_benchmark"
harness = false

[[bench]]
name = "llama3_benchmark"
harness = false

[[bench]]
name = "added_vocab_deserialize"
required-features = ["http"]
harness = false

[[bench]]
name = "truncation_benchmark"
harness = false

[[bench]]
name = "decode_benchmark"
harness = false

[[bench]]
name = "ci_benchmark"
harness = false

[dependencies]
tk-encode = { path = "tk-encode", version = "0.23.2-dev.0", default-features = false }
tk-train = { path = "tk-train", version = "0.23.2-dev.0", default-features = false, optional = true }

[features]
default = ["progressbar", "onig", "esaxx_fast", "train"]
train = ["dep:tk-train"]
esaxx_fast = ["tk-train?/esaxx_fast"]
progressbar = ["tk-encode/progressbar", "tk-train?/progressbar"]
onig = ["tk-encode/onig"]
http = ["tk-encode/http"]
unstable_wasm = ["tk-encode/unstable_wasm"]
rustls-tls = ["tk-encode/rustls-tls"]

[dev-dependencies]
criterion = "0.6"
serde_json = "1.0"
ahash = "0.8.11"
tempfile = "3.10"
assert_approx_eq = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3.18"

[profile.release]
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true

[[example]]
name = "encode_batch"
required-features = ["http"]
