[package]
name = "tokenizers-cpp"
version = "0.1.0"
authors = ["Alexey Romanov <romanov.alexey1@huawei.com>"]
edition = "2018"

[lib]
name = "tokenizers"
path = "tokenizers-cpp/lib.rs"
crate-type = ["cdylib"]

[dependencies]
cxx = "1.0.8"
derive_more = "0.99.11"

[dependencies.tokenizers]
version = "*"
path = "../../tokenizers"

[build-dependencies]
cxx-build = "1.0.8"
cc = "1.0.65"

[features]
test = []
