[package]
name = "tokenizers-python"
version = "0.22.3-dev.0"
authors = ["Anthony MOI <m.anthony.moi@gmail.com>"]
edition = "2021"

[lib]
name = "tokenizers"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
libc = "0.2"
env_logger = "0.11"
pyo3 = { version = "0.28.2",default-features = false, features = ["abi3", "abi3-py39", "py-clone", "experimental-inspect"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
once_cell = "1.19.0"
numpy = "0.28"
ndarray = "0.16"
itertools = "0.14"
ahash = { version = "0.8.11", features = ["serde"] }
pyo3-ffi = "0.28.2"

[dependencies.tokenizers]
path = "../../tokenizers"

[dev-dependencies]
tempfile = "3.10"
pyo3 = { version = "0.28.2", features = ["auto-initialize"] }


[features]
default = ["ext-module"]
ext-module = ["pyo3/extension-module"]
