[package]
name = "tokenizers-python"
version = "0.22.3-dev.0"
authors = ["Anthony MOI <m.anthony.moi@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "tokenizers"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
libc = "0.2"
env_logger = "0.11"
pyo3 = { version = "=0.28.2", default-features = false, features = ["py-clone", "experimental-inspect"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
once_cell = "1.19.0"
numpy = "0.28"
ndarray = "0.16"
itertools = "0.14"
ahash = { version = "0.8.11", features = ["serde"] }
pyo3-ffi = { version = "=0.28.2" }

[dependencies.tokenizers]
path = "../../tokenizers"

[build-dependencies]
pyo3-build-config = "=0.28.2"

[dev-dependencies]
tempfile = "3.10"
pyo3 = { version = "0.28", features = ["auto-initialize", "experimental-inspect"] }

[features]
default = ["ext-module", "abi3"]
ext-module = ["pyo3/extension-module"]
abi3 = ["pyo3/abi3", "pyo3/abi3-py310"]
