[package]
name = "tokenizers-python"
version = "0.23.2-dev.0"
authors = ["Anthony MOI <m.anthony.moi@gmail.com>"]
edition = "2021"

[lib]
name = "tokenizers"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
libc = "0.2"
env_logger = "0.11"
pyo3 = { version = "=0.29", default-features = false, features = ["py-clone", "experimental-inspect"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
once_cell = "1.19.0"
numpy = "0.29"
ndarray = "0.16"
itertools = "0.14"
ahash = { version = "0.8.11", features = ["serde"] }
pyo3-ffi = { version = "=0.29" }

[dependencies.tokenizers]
path = "../../tokenizers"

[build-dependencies]
pyo3-build-config = "=0.29"

[dev-dependencies]
tempfile = "3.10"
pyo3 = { version = "0.29", features = ["auto-initialize", "experimental-inspect"] }

[features]
default = ["ext-module", "abi3", "mimalloc"]
ext-module = ["pyo3/extension-module"]
abi3 = ["pyo3/abi3", "pyo3/abi3-py310"]
# Use mimalloc as the global allocator inside this cdylib.  Cuts per-call
# malloc/free traffic.  The dependency is declared only on targets where
# mimalloc has been tested (see target-conditional [dependencies] below),
# so on other targets enabling this feature is a no-op and the system
# allocator is used.  Disable with `--no-default-features` to opt out
# even on supported targets.
mimalloc = ["dep:mimalloc"]

# mimalloc is restricted to targets where it has been tested.  Other
# targets (Windows, musl, 32-bit, exotic Linux arches, macOS x86_64)
# fall back to the system allocator until community testing adds them.
[target.'cfg(any(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "aarch64"), target_env = "gnu"), all(target_os = "macos", target_arch = "aarch64")))'.dependencies]
mimalloc = { version = "0.1", optional = true }
