[package]
name = "edge-minimal"
version = "0.1.0"
edition = "2021"
description = "Cleaned, C-free, allocation-free build of the encoder for on-device/edge (0.37 MB stripped). Drops onig/pcre2/ahash/rayon."

[dependencies]
memchr = "2"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace]
