[package]
name = "special-token-matcher"
version = "0.1.0"
edition = "2021"
description = "Special-token matching shootout: MPHF length-probe (ours) vs IREE-style linear bucket scan vs daachorse Aho-Corasick. Speed + memory on real prompts."

[dependencies]
daachorse = "3.0.0"
memchr = "2"
ahash = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ptr_hash = "1.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
