[package]
name = "tk-encode"
version = "0.23.2-dev.0"
edition = "2018"
authors = [
  "Anthony MOI <m.anthony.moi@gmail.com>",
  "Nicolas Patry <patry.nicolas@protonmail.com>",
  "Arthur Zucker <arthur@huggingface.co",
  "Luc Georges <luc@huggingface.co",
]
homepage = "https://github.com/huggingface/tokenizers"
repository = "https://github.com/huggingface/tokenizers"
documentation = "https://docs.rs/tokenizers/"
license = "Apache-2.0"
keywords = ["tokenizer", "NLP", "huggingface", "BPE", "WordPiece"]
description = """
Inference (encode/decode) half of the 🤗 Tokenizers library: model engines,
the full pipeline components, and the `Tokenizer` orchestration — without any
training code.
"""

[package.metadata.docs.rs]
all-features = true

[lib]
name = "tk_encode"
path = "src/lib.rs"

[dependencies]
rand = "0.9"
onig = { version = "6.5.1", default-features = false, optional = true }
regex = "1.10"
regex-syntax = "0.8"
regex-automata = "0.4"
rayon = "1.10"
rayon-cond = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization-alignments = "0.1"
unicode_categories = "0.1"
unicode-segmentation = "1.11"
indicatif = { version = "0.18", optional = true }
itertools = "0.14"
log = "0.4"
derive_builder = "0.20"
spm_precompiled = "0.1.3"
hf-hub = { version = "0.4.1", features = [
  "ureq",
], default-features = false, optional = true }
daachorse = "3.0.0"
paste = "1.0.14"
macro_rules_attribute = "0.2.0"
thiserror = "2"
fancy-regex = { version = "0.17", optional = true }
getrandom = { version = "0.3" }
monostate = "0.1.12"
ahash = { version = "0.8.11", features = ["serde"] }
dary_heap = { version = "0.3.6", features = ["serde"] }
compact_str = { version = "0.9", features = ["serde"] }

[features]
# TODO: onig is C (Oniguruma, archived upstream). We're moving to the pure-Rust
# fancy-regex backend by default; once the legacy pre-tokenizers are gone, drop
# the `onig` feature + `src/utils/onig.rs` entirely.
default = ["progressbar", "fancy-regex"]
progressbar = ["indicatif"]
http = ["hf-hub"]
unstable_wasm = ["fancy-regex", "getrandom/wasm_js"]
rustls-tls = ["hf-hub?/rustls-tls"]

[dev-dependencies]
tempfile = "3.10"
assert_approx_eq = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3.18"
