name:                tokenizers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-test#readme
author:              Austin Huang
maintainer:          austinh@alum.mit.edu
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  Tokenizers
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:       base >= 4.7 && < 5

executable haskell-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , tokenizers
  extra-libraries:     haskell

-- executable download-vocab
--   hs-source-dirs:      src
--   main-is:             Download.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--                      , containers
--                      , tokenizers
--   extra-libraries:     haskell
