name:                tokenizers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-test#readme
author:              Austin Huang
maintainer:          austinh@alum.mit.edu
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Tokenizers
      Paths_tokenizers
  autogen-modules:
      Paths_tokenizers
  hs-source-dirs:
      src
  ghc-options: -W -Wall -dcore-lint
  build-depends:
      base >= 4.7 && < 5
  extra-libraries:
      tokenizers_haskell
  default-language: Haskell2010

test-suite tokenizers-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -W -Wall -dcore-lint
  build-depends:
      base >= 4.7 && < 5
    , tokenizers
  extra-libraries:
      tokenizers_haskell
  default-language: Haskell2010

-- executable download-vocab
--   hs-source-dirs:      src
--   main-is:             Download.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--                      , containers
--                      , tokenizers
--   extra-libraries:     tokenizers_haskell
