[package]
name = "stub-gen"
version = "0.1.0"
edition = "2021"
description = "Stub generation tool for tokenizers Python bindings"

[[bin]]
name = "stub-gen"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
pyo3 = { version = "0.27.2", default-features = false, features = ["auto-initialize"] }
pyo3-introspection = "0.27.2"
